# nwork

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: CMakeLists.txt
include/nwork/: API.h  Base.h  Group.h  Object.h  Queue.h  Reference.h  ThreadPool.h  Work.h
lib/: CMakeLists.txt  Group.cpp  Pcheader.h  Queue.cpp  ThreadPool.cpp
test/: CMakeLists.txt  Main.cpp  Pcheader.h
